--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -76,6 +76,9 @@ jobs:
     - name: Run Trivy vulnerability scanner
       if: github.event_name != 'pull_request'
       uses: aquasecurity/trivy-action@master
+      env:
+        TRIVY_USERNAME: ${{ github.actor }}
+        TRIVY_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
       with:
         image-ref: ghcr.io/${{ github.repository }}:latest
         format: 'sarif'
@@ -93,6 +96,9 @@ jobs:
     - name: Generate Trivy report summary
       if: github.event_name != 'pull_request'
       uses: aquasecurity/trivy-action@master
+      env:
+        TRIVY_USERNAME: ${{ github.actor }}
+        TRIVY_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
       with:
         image-ref: ghcr.io/${{ github.repository }}:latest
         format: 'table'
